correct flex-wrap

--- a/style/second.css
+++ b/style/second.css
@@ -28,12 +28,15 @@ a {
   margin-top: 30px;
   margin-left: 250px;
   overflow: scroll;
+
 }
 
 
 .flex-container {
   list-style: none;
+  flex-wrap: wrap;
   display: flex;
+  width: 100%;
 }
 
 .perso{
